--- a/pages/index.html
+++ b/pages/index.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="../style/style.css" />
-    <title>Please rate your service</title>
+    <title>IIIT NR Results</title>
   </head>
   <body>
     <div class="container">
       <img src="../style/logo.png" alt="Lexus" class="logo" />
-     
+      <h1> IIIT Naya Raipur Results </h1>
       <form action="/submit" method="POST">
         <div class="form-group">
           <h3>Enrollment No.</h3>
